# example-fastapi

./: pyproject.toml
alembic/: env.py
alembic/versions/: 20c691bcc9bf_auto_tables_posts_users_votes.py  bcf1fa2f99b0_auto_phone_number_column_in_users.py
src/: config.py  database.py  main.py  models.py  oauth2.py  schemas.py
src/routers/: auth.py  post.py  user.py  vote.py
